--- a/vezba2.css
+++ b/vezba2.css
@@ -18,6 +18,7 @@ body{
     border-radius: 16px;
     background-color: lightgrey;
     padding: 0px;
+
 }
 .karticka-1:hover, .karticka-2:hover{
     scale: 1.05;
@@ -76,7 +77,7 @@ body{
     background-color: lightgrey;
     padding: 0px;
     margin: 15px;
-    
+    margin-top: 22px;
 }
 
 .karticka-2:hover h6 {
